# tiny-tokenizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  tok.json
backend/: .env.example  requirements.txt
backend/app/: analytics.py  config.py  errors.py  logging_setup.py  main.py  metrics.py  middleware.py  rate_limit.py  routes.py  schemas.py  session.py
backend/app/tokenizers/: __init__.py  base.py  registry.py  tiktoken_adapter.py  tiny.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  TokenStrip.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Learn.tsx  Playground.tsx
tokenizer/: __init__.py  cli.py  requirements.txt  tiny.py
