[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-tokenizer"
version = "0.1.0"
description = "Interactive tokenizer playground — visualize, compare, and price LLM tokenizers."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # tokenizer
    "regex>=2024.0.0",
    "pymupdf>=1.24.0",
    # backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "posthog>=3.7.0",
    "itsdangerous>=2.2.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.27.0",
    # tokenizer adapters
    "tiktoken>=0.8.0",
]

[project.scripts]
tiny-tokenizer = "tokenizer.cli:main"

# Treat the repo as a project with two top-level packages:
#   - `tokenizer/`  (always lives at repo root)
#   - `app/`        (lives inside backend/; mapped here so it imports cleanly)
[tool.setuptools.packages.find]
where = [".", "backend"]
include = ["tokenizer*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["venv", "frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
